overflow fixed

--- a/style.css
+++ b/style.css
@@ -10,8 +10,8 @@
 
 main {
     flex-grow: 1;
-    overflow: auto; /*per i contenuti*/
     background-color: #141922;
+    
 }
 
 footer {
@@ -30,10 +30,32 @@ footer {
 
 /** Main */
 
-nav.side-bar {
+/*nav.side-bar {
     width: 250px;
     height: 100%;
+    flex-shrink: 0; senza un flex questo è inutile
+    background-color: #000000;
+
+} */
+
+
+
+/* vw */
+
+.wrapper-x {
+    width: 100vw;
+    display: flex;
+    flex-direction: row;
+}
+
+.side-bar {
+    width: 250px;
     flex-shrink: 0;
     background-color: #000000;
 }
 
+
+p {
+    height: calc(100vh - 100px);
+    overflow: auto; 
+}
